<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.stpl.app</groupId>
		<artifactId>global-parent</artifactId>
		<version>1.0</version>
		<relativePath>../../pom.xml</relativePath>
	</parent>

	<groupId>com.stpl.app</groupId>
	<artifactId>gtnGCM</artifactId>
	<version>1.0</version>
	<packaging>jar</packaging>

	<name>gtnGCM</name>

	<properties>
		<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<lazy.container.version>2.0</lazy.container.version>
		<stpl.excelexport.version>2.0</stpl.excelexport.version>
		<apache-poi.version>3.9</apache-poi.version>
		<commons-io.version>2.2</commons-io.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.vaadin</groupId>
				<artifactId>vaadin-bom</artifactId>
				<version>${vaadin.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-themes</artifactId>
		</dependency>

		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>osgi.annotation</artifactId>
			<version>6.0.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>osgi.core</artifactId>
			<version>6.0.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>${apache-poi.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>osgi.cmpn</artifactId>
			<version>6.0.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.stpl.ifs</groupId>
			<artifactId>gtnUtility</artifactId>
			<version>1.0</version>
			<exclusions>
				<exclusion>
					<artifactId>dom4j</artifactId>
					<groupId>dom4j</groupId>
				</exclusion>
				<exclusion>
					<artifactId>hibernate-validator</artifactId>
					<groupId>org.hibernate</groupId>
				</exclusion>
			</exclusions>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.stpl.app</groupId>
			<artifactId>gtnApiPartI</artifactId>
			<version>1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>${commons.lang.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.liferay.portal</groupId>
			<artifactId>com.liferay.portal.kernel</artifactId>
			<version>2.6.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.stpl.app</groupId>
			<artifactId>util-service</artifactId>
			<version>1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.stpl.addons</groupId>
			<artifactId>clara</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-client</artifactId>
			<version>${vaadin.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-compatibility-client</artifactId>
			<version>${vaadin.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2.2</version>
			<scope>provided</scope>
			<!--<scope>compile</scope> -->
		</dependency>
		<dependency>
			<groupId>org.jboss.logging</groupId>
			<artifactId>jboss-logging</artifactId>
			<version>${org.jboss.logging.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.stpl.addons</groupId>
			<artifactId>beforeunload-addon</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.portlet</groupId>
			<artifactId>portlet-api</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.stpl.addons</groupId>
			<artifactId>customdatefield</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.8.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>${javaee-api.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.14</version>
		</dependency>
		<!-- <dependency> <groupId>com.stpl.app.bpm</groupId> <artifactId>stpl-jbpm</artifactId> 
			<version>${bpm.version}</version> <exclusions> <exclusion> <artifactId>dom4j</artifactId> 
			<groupId>dom4j</groupId> </exclusion> <exclusion> <artifactId>hibernate-jpa-2.0-api</artifactId> 
			<groupId>org.hibernate.javax.persistence</groupId> </exclusion> <exclusion> 
			<groupId>commons-codec</groupId> <artifactId>commons-codec</artifactId> </exclusion> 
			<exclusion> <groupId>commons-logging</groupId> <artifactId>commons-logging</artifactId> 
			</exclusion> </exclusions> <scope>provided</scope> </dependency> -->


		<dependency>
			<groupId>com.stpl.addons</groupId>
			<artifactId>extfilteringtable</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.stpl.addons</groupId>
			<artifactId>ext-container</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.stpl.addons</groupId>
			<artifactId>customwindow</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.stpl.addons</groupId>
			<artifactId>custommenubar</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.stpl.addons</groupId>
			<artifactId>extcustomcheckbox</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.stpl.app.bpm</groupId>
			<artifactId>util-class</artifactId>
			<version>1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.stpl.addons</groupId>
			<artifactId>customcombobox</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>de.steinwedel.vaadin.addon</groupId>
			<artifactId>messagebox</artifactId>
			<version>${de.steinwedel.vaadin.addon.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.vaadin</groupId>
					<artifactId>vaadin-themes</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.vaadin</groupId>
					<artifactId>vaadin-client-compiled</artifactId>
				</exclusion>
			</exclusions>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.stpl.addons</groupId>
			<artifactId>lazy-container</artifactId>
			<version>${lazy.container.version}</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>com.vaadin</groupId>
					<artifactId>vaadin-client-compiled</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.vaadin</groupId>
					<artifactId>vaadin-themes</artifactId>
				</exclusion>
			</exclusions>

		</dependency>
		<dependency>
			<groupId>com.stpl.addons</groupId>
			<artifactId>customtextfield</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.stpl.addons</groupId>
			<artifactId>tableexport</artifactId>
			<version>${stpl.excelexport.version}</version>
			<scope>provided</scope>
		</dependency>
		<!-- <dependency> <groupId>com.stpl.gtn.gtn2o</groupId> <artifactId>GtnFrameworkCommon</artifactId> 
			<version>1.0</version> <scope>provided</scope> </dependency> -->

		<!-- <dependency> <groupId>com.stpl.app</groupId> <artifactId>gtnWorkflow</artifactId> 
			<version>1.0</version> <type>jar</type> </dependency> -->
		<dependency>
			<groupId>com.stpl.addons</groupId>
			<artifactId>ErrorLabel</artifactId>
			<version>1.0</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<directory>src/main/webapp</directory>
			</resource>
		</resources>
		<plugins>

			<!-- As we are doing "inplace" GWT compilation, ensure the widgetset -->
			<!-- directory is cleaned properly -->
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>2.4.1</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<archive>
						<manifestFile>
							${project.build.outputDirectory}/META-INF/MANIFEST.MF
						</manifestFile>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>biz.aQute.bnd</groupId>
				<artifactId>bnd-maven-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<goals>
							<goal>bnd-process</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-eclipse-plugin</artifactId>
					<configuration>
						<wtpversion>2.0</wtpversion>
						<additionalProjectnatures>
							<projectnature>com.vaadin.integration.eclipse.widgetsetNature</projectnature>
						</additionalProjectnatures>
						<additionalBuildcommands>
							<buildcommand>com.vaadin.integration.eclipse.widgetsetBuilder</buildcommand>
							<buildcommand>com.vaadin.integration.eclipse.addonStylesBuilder</buildcommand>
						</additionalBuildcommands>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>
